--- a/Experiments/Lucas/Experiment1/app/src/main/res/values/strings.xml
+++ b/Experiments/Lucas/Experiment1/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Experiment1</string>
+    <string name="app_name">Experiment1 - Form Submission</string>
+    <string name="enter_email">Enter your email</string>
+    <string name="enter_user">Enter your username</string>
+    <string name="enter_pass">Enter your password</string>
 </resources>
